iommu/vt-d: debugfs: Fix legacy mode page table dump logic (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -466,6 +466,7 @@
 	patches.kernel.org/6.17.3-394-wifi-ath12k-Add-fallback-for-invalid-channel-n.patch
 	patches.kernel.org/6.17.3-395-wifi-ath12k-fix-wrong-logging-ID-used-for-CE.patch
 	patches.kernel.org/6.17.3-396-wifi-ath10k-avoid-unnecessary-wait-for-service.patch
+	patches.kernel.org/6.17.3-397-iommu-vt-d-debugfs-Fix-legacy-mode-page-table-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
