--- a/series.conf
+++ b/series.conf
@@ -305,6 +305,7 @@
 	patches.kernel.org/6.17.3-233-usb-host-max3421-hcd-Fix-error-pointer-derefer.patch
 	patches.kernel.org/6.17.3-234-usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-thr.patch
 	patches.kernel.org/6.17.3-235-PCI-pwrctrl-Fix-double-cleanup-on-devm_add_act.patch
+	patches.kernel.org/6.17.3-236-misc-pci_endpoint_test-Fix-array-underflow-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
