pinctrl: eswin: Fix regulator error check and Kconfig dependency (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -172,6 +172,7 @@
 	patches.kernel.org/6.17.3-100-power-supply-cw2015-Fix-a-alignment-coding-sty.patch
 	patches.kernel.org/6.17.3-101-hwmon-asus-ec-sensors-Narrow-lock-for-X870E-CR.patch
 	patches.kernel.org/6.17.3-102-pinctrl-renesas-Use-int-type-to-store-negative.patch
+	patches.kernel.org/6.17.3-103-pinctrl-eswin-Fix-regulator-error-check-and-Kc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
