LoongArch: BPF: Remove duplicated bpf_flush_icache() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -596,6 +596,7 @@
 	patches.kernel.org/6.17.3-524-LoongArch-BPF-Don-t-align-trampoline-size.patch
 	patches.kernel.org/6.17.3-525-LoongArch-BPF-Make-trampoline-size-stable.patch
 	patches.kernel.org/6.17.3-526-LoongArch-BPF-Make-error-handling-robust-in-ar.patch
+	patches.kernel.org/6.17.3-527-LoongArch-BPF-Remove-duplicated-bpf_flush_icac.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
