genirq/test: Fix depth tests on architectures with NOREQUEST by default (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -155,6 +155,7 @@
 	patches.kernel.org/6.17.3-083-block-use-int-to-store-blk_stack_limits-return.patch
 	patches.kernel.org/6.17.3-084-ARM-dts-stm32-stm32mp151c-plyaqm-Use-correct-d.patch
 	patches.kernel.org/6.17.3-085-dt-bindings-vendor-prefixes-Add-undocumented-v.patch
+	patches.kernel.org/6.17.3-086-genirq-test-Fix-depth-tests-on-architectures-w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
