--- a/series.conf
+++ b/series.conf
@@ -77,6 +77,7 @@
 	patches.kernel.org/6.17.3-005-Fix-CC_HAS_ASM_GOTO_OUTPUT-on-non-x86-architec.patch
 	patches.kernel.org/6.17.3-006-seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-.patch
 	patches.kernel.org/6.17.3-007-kbuild-Add-missing-objtree-prefix-to-powerpc-c.patch
+	patches.kernel.org/6.17.3-008-selftests-arm64-Check-fread-return-value-in-ex.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
