clocksource/drivers/tegra186: Avoid 64-bit division (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -261,6 +261,7 @@
 	patches.kernel.org/6.17.3-189-tools-nolibc-make-time_t-robust-if-__kernel_ol.patch
 	patches.kernel.org/6.17.3-190-spi-fix-return-code-when-spi-device-has-too-ma.patch
 	patches.kernel.org/6.17.3-191-clocksource-drivers-timer-tegra186-Avoid-64-bi.patch
+	patches.kernel.org/6.17.3-192-clocksource-drivers-tegra186-Avoid-64-bit-divi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
