--- a/series.conf
+++ b/series.conf
@@ -352,6 +352,7 @@
 	patches.kernel.org/6.17.3-280-drm-amdgpu-Check-vcn-state-before-profile-swit.patch
 	patches.kernel.org/6.17.3-281-accel-amdxdna-Use-int-instead-of-u32-to-store-.patch
 	patches.kernel.org/6.17.3-282-efi-Explain-OVMF-acronym-in-OVMF_DEBUG_LOG-hel.patch
+	patches.kernel.org/6.17.3-283-net-dst-introduce-dst-dev_rcu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
