coresight: Fix incorrect handling for return value of devm_kzalloc (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -501,6 +501,7 @@
 	patches.kernel.org/6.17.3-429-coresight-Avoid-enable-programming-clock-dupli.patch
 	patches.kernel.org/6.17.3-430-coresight-trbe-Return-NULL-pointer-for-allocat.patch
 	patches.kernel.org/6.17.3-431-coresight-tpda-fix-the-logic-to-setup-the-elem.patch
+	patches.kernel.org/6.17.3-432-coresight-Fix-incorrect-handling-for-return-va.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
