--- a/series.conf
+++ b/series.conf
@@ -518,6 +518,7 @@
 	patches.kernel.org/6.17.3-446-iommu-selftest-prevent-use-of-uninitialized-va.patch
 	patches.kernel.org/6.17.3-447-RDMA-siw-Always-report-immediate-post-SQ-error.patch
 	patches.kernel.org/6.17.3-448-net-enetc-Fix-probing-error-message-typo-for-t.patch
+	patches.kernel.org/6.17.3-449-net-usb-Remove-disruptive-netif_wake_queue-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
