--- a/series.conf
+++ b/series.conf
@@ -251,6 +251,7 @@
 	patches.kernel.org/6.17.3-179-bpf-arm64-Call-bpf_jit_binary_pack_finalize-in.patch
 	patches.kernel.org/6.17.3-180-arm64-dts-apple-t600x-Add-missing-WiFi-propert.patch
 	patches.kernel.org/6.17.3-181-arm64-dts-apple-t600x-Add-bluetooth-device-nod.patch
+	patches.kernel.org/6.17.3-182-arm64-dts-apple-Add-ethernet0-alias-for-J375-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
