--- a/series.conf
+++ b/series.conf
@@ -111,6 +111,7 @@
 	patches.kernel.org/6.17.3-039-btrfs-return-any-hit-error-from-extent_writepa.patch
 	patches.kernel.org/6.17.3-040-btrfs-fix-symbolic-link-reading-when-bs-ps.patch
 	patches.kernel.org/6.17.3-041-pinctrl-renesas-rzg2l-Fix-invalid-unsigned-ret.patch
+	patches.kernel.org/6.17.3-042-arm64-dts-renesas-rzg2lc-smarc-Disable-CAN-FD-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
