--- a/series.conf
+++ b/series.conf
@@ -493,6 +493,7 @@
 	patches.kernel.org/6.17.3-421-dm-vdo-return-error-on-corrupted-metadata-in-s.patch
 	patches.kernel.org/6.17.3-422-coresight-fix-indentation-error-in-cscfg_remov.patch
 	patches.kernel.org/6.17.3-423-coresight-etm4x-Conditionally-access-register-.patch
+	patches.kernel.org/6.17.3-424-coresight-tmc-Support-atclk.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
