f2fs: fix to zero data after EOF for compressed file correctly (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -295,6 +295,7 @@
 	patches.kernel.org/6.17.3-223-drm-radeon-r600_cs-clean-up-of-dead-code-in-r6.patch
 	patches.kernel.org/6.17.3-224-f2fs-fix-condition-in-__allow_reserved_blocks.patch
 	patches.kernel.org/6.17.3-225-f2fs-fix-to-avoid-overflow-while-left-shift-op.patch
+	patches.kernel.org/6.17.3-226-f2fs-fix-to-zero-data-after-EOF-for-compressed.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
