genirq/test: Drop CONFIG_GENERIC_IRQ_MIGRATION assumptions (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -158,6 +158,7 @@
 	patches.kernel.org/6.17.3-086-genirq-test-Fix-depth-tests-on-architectures-w.patch
 	patches.kernel.org/6.17.3-087-genirq-test-Select-IRQ_DOMAIN.patch
 	patches.kernel.org/6.17.3-088-genirq-test-Depend-on-SPARSE_IRQ.patch
+	patches.kernel.org/6.17.3-089-genirq-test-Drop-CONFIG_GENERIC_IRQ_MIGRATION-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
