drm/dp: drm_edp_backlight_set_level: do not always send 3-byte commands (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -324,6 +324,7 @@
 	patches.kernel.org/6.17.3-252-f2fs-fix-to-clear-unusable_cap-for-checkpoint-.patch
 	patches.kernel.org/6.17.3-253-f2fs-fix-to-avoid-NULL-pointer-dereference-in-.patch
 	patches.kernel.org/6.17.3-254-f2fs-fix-to-allow-removing-qf_name.patch
+	patches.kernel.org/6.17.3-255-drm-dp-drm_edp_backlight_set_level-do-not-alwa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
