--- a/series.conf
+++ b/series.conf
@@ -142,6 +142,7 @@
 	patches.kernel.org/6.17.3-070-scripts-misc-check-update-export-checks-for-EX.patch
 	patches.kernel.org/6.17.3-071-soc-qcom-rpmh-rsc-Unconditionally-clear-_TRIGG.patch
 	patches.kernel.org/6.17.3-072-pinctrl-meson-gxl-add-missing-i2c_d-pinmux.patch
+	patches.kernel.org/6.17.3-073-blk-mq-check-kobject-state_in_sysfs-before-del.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
