--- a/series.conf
+++ b/series.conf
@@ -577,6 +577,7 @@
 	patches.kernel.org/6.17.3-505-ASoC-SOF-ipc4-pcm-fix-start-offset-calculation.patch
 	patches.kernel.org/6.17.3-506-fs-udf-fix-OOB-read-in-lengthAllocDescs-handli.patch
 	patches.kernel.org/6.17.3-507-net-nfc-nci-Add-parameter-validation-for-packe.patch
+	patches.kernel.org/6.17.3-508-mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
