bpf: Explicitly check accesses to bpf_sock_addr (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -242,6 +242,7 @@
 	patches.kernel.org/6.17.3-170-selftests-watchdog-skip-ping-loop-if-WDIOF_KEE.patch
 	patches.kernel.org/6.17.3-171-selftests-kselftest_harness-Add-harness-selfte.patch
 	patches.kernel.org/6.17.3-172-blk-throttle-fix-throtl_data-leak-during-disk-.patch
+	patches.kernel.org/6.17.3-173-bpf-Explicitly-check-accesses-to-bpf_sock_addr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
