--- a/series.conf
+++ b/series.conf
@@ -551,6 +551,7 @@
 	patches.kernel.org/6.17.3-479-net-enetc-initialize-SW-PIR-and-CIR-based-HW-P.patch
 	patches.kernel.org/6.17.3-480-iommufd-Register-iommufd-mock-devices-with-fws.patch
 	patches.kernel.org/6.17.3-481-Revert-net-mlx5e-Update-and-set-Xon-Xoff-upon-.patch
+	patches.kernel.org/6.17.3-482-NFSD-filecache-add-STATX_DIOALIGN-and-STATX_DI.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
