--- a/series.conf
+++ b/series.conf
@@ -556,6 +556,7 @@
 	patches.kernel.org/6.17.3-484-octeontx2-vf-fix-bitmap-leak.patch
 	patches.kernel.org/6.17.3-485-octeontx2-pf-fix-bitmap-leak.patch
 	patches.kernel.org/6.17.3-486-vhost-vringh-Modify-the-return-value-check.patch
+	patches.kernel.org/6.17.3-487-selftests-bpf-Fix-typos-and-grammar-in-test-so.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
