tracing: Fix tracing_mark_raw_write() to use buf and not ubuf (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -585,6 +585,7 @@
 	patches.kernel.org/6.17.3-513-tracing-Fix-wakeup-tracers-on-failure-of-acqui.patch
 	patches.kernel.org/6.17.3-514-tracing-Fix-irqoff-tracers-on-failure-of-acqui.patch
 	patches.kernel.org/6.17.3-515-tracing-Have-trace_marker-use-per-cpu-data-to-.patch
+	patches.kernel.org/6.17.3-516-tracing-Fix-tracing_mark_raw_write-to-use-buf-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
