--- a/series.conf
+++ b/series.conf
@@ -370,6 +370,7 @@
 	patches.kernel.org/6.17.3-298-coresight-trbe-Add-ISB-after-TRBLIMITR-write.patch
 	patches.kernel.org/6.17.3-299-coresight-Fix-missing-include-for-FIELD_GET.patch
 	patches.kernel.org/6.17.3-300-coresight-Only-register-perf-symlink-for-sinks.patch
+	patches.kernel.org/6.17.3-301-drm-amdgpu-Power-up-UVD-3-for-FW-validation-v2.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
