ALSA: pcm: Disable bottom softirqs as part of spin_lock_irq() on PREEMPT_RT (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -439,6 +439,7 @@
 	patches.kernel.org/6.17.3-367-f2fs-fix-to-avoid-migrating-empty-section.patch
 	patches.kernel.org/6.17.3-368-f2fs-fix-to-mitigate-overhead-of-f2fs_zero_pos.patch
 	patches.kernel.org/6.17.3-369-RISC-V-KVM-Write-hgatp-register-with-valid-mod.patch
+	patches.kernel.org/6.17.3-370-ALSA-pcm-Disable-bottom-softirqs-as-part-of-sp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
