coresight: Only register perf symlink for sinks with alloc_buffer (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -369,6 +369,7 @@
 	patches.kernel.org/6.17.3-297-dmaengine-Fix-dma_async_tx_descriptor-tx_submi.patch
 	patches.kernel.org/6.17.3-298-coresight-trbe-Add-ISB-after-TRBLIMITR-write.patch
 	patches.kernel.org/6.17.3-299-coresight-Fix-missing-include-for-FIELD_GET.patch
+	patches.kernel.org/6.17.3-300-coresight-Only-register-perf-symlink-for-sinks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
