--- a/series.conf
+++ b/series.conf
@@ -101,6 +101,7 @@
 	patches.kernel.org/6.17.3-029-smb-client-fix-sending-the-iwrap-custom-IRD-OR.patch
 	patches.kernel.org/6.17.3-030-smb-server-fix-IRD-ORD-negotiation-with-the-cl.patch
 	patches.kernel.org/6.17.3-031-EDAC-i10nm-Skip-DIMM-enumeration-on-a-disabled.patch
+	patches.kernel.org/6.17.3-032-perf-x86-intel-Use-early_initcall-to-hook-bts_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
