--- a/series.conf
+++ b/series.conf
@@ -336,6 +336,7 @@
 	patches.kernel.org/6.17.3-264-HID-i2c-hid-Make-elan-touch-controllers-power-.patch
 	patches.kernel.org/6.17.3-265-RDMA-mlx5-Better-estimate-max_qp_wr-to-reflect.patch
 	patches.kernel.org/6.17.3-266-RDMA-mlx5-Fix-vport-loopback-forcing-for-MPV-d.patch
+	patches.kernel.org/6.17.3-267-wifi-rtw88-Use-led-brightness_set_blocking-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
