--- a/series.conf
+++ b/series.conf
@@ -190,6 +190,7 @@
 	patches.kernel.org/6.17.3-118-soc-mediatek-mtk-svs-fix-device-leaks-on-mt819.patch
 	patches.kernel.org/6.17.3-119-cpuidle-qcom-spm-fix-device-and-OF-node-leaks-.patch
 	patches.kernel.org/6.17.3-120-block-cleanup-bio_issue.patch
+	patches.kernel.org/6.17.3-121-block-initialize-bio-issue-time-in-blk_mq_subm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
