--- a/series.conf
+++ b/series.conf
@@ -213,6 +213,7 @@
 	patches.kernel.org/6.17.3-141-arm64-dts-mediatek-mt8188-Change-efuse-fallbac.patch
 	patches.kernel.org/6.17.3-142-arm64-dts-mediatek-mt8186-tentacruel-Fix-touch.patch
 	patches.kernel.org/6.17.3-143-arm64-dts-ti-k3-pinctrl-Fix-the-bug-in-existin.patch
+	patches.kernel.org/6.17.3-144-arm64-dts-renesas-r9a09g047e57-smarc-Fix-gpio-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
