usb: host: max3421-hcd: Fix error pointer dereference in probe cleanup (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -302,6 +302,7 @@
 	patches.kernel.org/6.17.3-230-media-zoran-Remove-zoran_fh-structure.patch
 	patches.kernel.org/6.17.3-231-phy-rockchip-naneng-combphy-Enable-U3-OTG-port.patch
 	patches.kernel.org/6.17.3-232-drm-bridge-cdns-dsi-Fix-the-_atomic_check.patch
+	patches.kernel.org/6.17.3-233-usb-host-max3421-hcd-Fix-error-pointer-derefer.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
