--- a/series.conf
+++ b/series.conf
@@ -209,6 +209,7 @@
 	patches.kernel.org/6.17.3-137-arm64-dts-ti-k3-j742s2-mcu-wakeup-Override-fir.patch
 	patches.kernel.org/6.17.3-138-arm64-dts-ti-k3-Rename-rproc-reserved-mem-node.patch
 	patches.kernel.org/6.17.3-139-Revert-arm64-dts-ti-k3-j721e-sk-Fix-reversed-C.patch
+	patches.kernel.org/6.17.3-140-Revert-arm64-dts-ti-k3-j721e-beagleboneai64-Fi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
