--- a/series.conf
+++ b/series.conf
@@ -430,6 +430,7 @@
 	patches.kernel.org/6.17.3-358-wifi-mt76-mt7996-Fix-RX-packets-configuration-.patch
 	patches.kernel.org/6.17.3-359-wifi-mt76-mt7996-Convert-mt7996_wed_rro_addr-t.patch
 	patches.kernel.org/6.17.3-360-wifi-mt76-mt7915-fix-mt7981-pre-calibration.patch
+	patches.kernel.org/6.17.3-361-wifi-mt76-mt7996-remove-redundant-per-phy-mac8.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
