nvme-tcp: send only permitted commands for secure concat (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -234,6 +234,7 @@
 	patches.kernel.org/6.17.3-162-nvme-auth-update-bi_directional-flag.patch
 	patches.kernel.org/6.17.3-163-nvmet-fc-move-lsop-put-work-to-nvmet_fc_ls_req.patch
 	patches.kernel.org/6.17.3-164-nvmet-fcloop-call-done-callback-even-when-remo.patch
+	patches.kernel.org/6.17.3-165-nvme-tcp-send-only-permitted-commands-for-secu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
