misc: fastrpc: Skip reference for DMA handles (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -614,6 +614,7 @@
 	patches.kernel.org/6.17.3-542-misc-fastrpc-Save-actual-DMA-size-in-fastrpc_m.patch
 	patches.kernel.org/6.17.3-543-misc-fastrpc-Fix-fastrpc_map_lookup-operation.patch
 	patches.kernel.org/6.17.3-544-misc-fastrpc-fix-possible-map-leak-in-fastrpc_.patch
+	patches.kernel.org/6.17.3-545-misc-fastrpc-Skip-reference-for-DMA-handles.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
