--- a/series.conf
+++ b/series.conf
@@ -88,6 +88,7 @@
 	patches.kernel.org/6.17.3-016-gfs2-Remove-duplicate-check-in-do_xmote.patch
 	patches.kernel.org/6.17.3-017-gfs2-Get-rid-of-GLF_INVALIDATE_IN_PROGRESS.patch
 	patches.kernel.org/6.17.3-018-gfs2-do_xmote-cleanup.patch
+	patches.kernel.org/6.17.3-019-gfs2-Add-proper-lockspace-locking.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
