--- a/series.conf
+++ b/series.conf
@@ -491,6 +491,7 @@
 	patches.kernel.org/6.17.3-419-wifi-ath12k-Fix-flush-cache-failure-during-RX-.patch
 	patches.kernel.org/6.17.3-420-wifi-cfg80211-fix-width-unit-in-cfg80211_radio.patch
 	patches.kernel.org/6.17.3-421-dm-vdo-return-error-on-corrupted-metadata-in-s.patch
+	patches.kernel.org/6.17.3-422-coresight-fix-indentation-error-in-cscfg_remov.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
