smb: client: fix crypto buffers in non-linear memory (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -546,6 +546,7 @@
 	patches.kernel.org/6.17.3-474-net-mlx5-Stop-polling-for-command-response-if-.patch
 	patches.kernel.org/6.17.3-475-net-mlx5-pagealloc-Fix-reclaim-race-during-com.patch
 	patches.kernel.org/6.17.3-476-net-mlx5-fw-reset-add-reset-timeout-work.patch
+	patches.kernel.org/6.17.3-477-smb-client-fix-crypto-buffers-in-non-linear-me.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
