--- a/series.conf
+++ b/series.conf
@@ -438,6 +438,7 @@
 	patches.kernel.org/6.17.3-366-f2fs-fix-to-truncate-first-page-in-error-path-.patch
 	patches.kernel.org/6.17.3-367-f2fs-fix-to-avoid-migrating-empty-section.patch
 	patches.kernel.org/6.17.3-368-f2fs-fix-to-mitigate-overhead-of-f2fs_zero_pos.patch
+	patches.kernel.org/6.17.3-369-RISC-V-KVM-Write-hgatp-register-with-valid-mod.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
