--- a/series.conf
+++ b/series.conf
@@ -559,6 +559,7 @@
 	patches.kernel.org/6.17.3-487-selftests-bpf-Fix-typos-and-grammar-in-test-so.patch
 	patches.kernel.org/6.17.3-488-selftests-bpf-move-get_ksyms-and-get_addrs-to-.patch
 	patches.kernel.org/6.17.3-489-selftests-bpf-Fix-realloc-size-in-bpf_get_addr.patch
+	patches.kernel.org/6.17.3-490-bpf-Skip-scalar-adjustment-for-BPF_NEG-if-dst-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
