--- a/series.conf
+++ b/series.conf
@@ -183,6 +183,7 @@
 	patches.kernel.org/6.17.3-111-arm64-dts-mediatek-mt8195-Remove-suspend-break.patch
 	patches.kernel.org/6.17.3-112-arm64-dts-mediatek-mt8183-Fix-out-of-range-pul.patch
 	patches.kernel.org/6.17.3-113-nbd-restrict-sockets-to-TCP-and-UDP.patch
+	patches.kernel.org/6.17.3-114-PM-devfreq-rockchip-dfi-double-count-on-RK3588.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
