--- a/series.conf
+++ b/series.conf
@@ -230,6 +230,7 @@
 	patches.kernel.org/6.17.3-158-pwm-tiehrpwm-Fix-corner-case-in-clock-divisor-.patch
 	patches.kernel.org/6.17.3-159-ACPICA-Apply-ACPI_NONSTRING.patch
 	patches.kernel.org/6.17.3-160-ACPICA-Fix-largest-possible-resource-descripto.patch
+	patches.kernel.org/6.17.3-161-riscv-bpf-Sign-extend-struct-ops-return-values.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
