net: dlink: handle copy_thresh allocation failure (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -542,6 +542,7 @@
 	patches.kernel.org/6.17.3-470-tcp-use-skb-len-instead-of-skb-truesize-in-tcp.patch
 	patches.kernel.org/6.17.3-471-nfp-fix-RSS-hash-key-size-when-RSS-is-not-supp.patch
 	patches.kernel.org/6.17.3-472-net-ena-return-0-in-ena_get_rxfh_key_size-when.patch
+	patches.kernel.org/6.17.3-473-net-dlink-handle-copy_thresh-allocation-failur.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
