uio_hv_generic: Let userspace take care of interrupt mask (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -565,6 +565,7 @@
 	patches.kernel.org/6.17.3-493-ALSA-hda-hdmi-Add-pin-fix-for-HP-ProDesk-model.patch
 	patches.kernel.org/6.17.3-494-ALSA-hda-realtek-Add-quirk-for-HP-Spectre-14t-.patch
 	patches.kernel.org/6.17.3-495-Squashfs-fix-uninit-value-in-squashfs_get_pare.patch
+	patches.kernel.org/6.17.3-496-uio_hv_generic-Let-userspace-take-care-of-inte.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
