--- a/series.conf
+++ b/series.conf
@@ -558,6 +558,7 @@
 	patches.kernel.org/6.17.3-486-vhost-vringh-Modify-the-return-value-check.patch
 	patches.kernel.org/6.17.3-487-selftests-bpf-Fix-typos-and-grammar-in-test-so.patch
 	patches.kernel.org/6.17.3-488-selftests-bpf-move-get_ksyms-and-get_addrs-to-.patch
+	patches.kernel.org/6.17.3-489-selftests-bpf-Fix-realloc-size-in-bpf_get_addr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
