--- a/series.conf
+++ b/series.conf
@@ -533,6 +533,7 @@
 	patches.kernel.org/6.17.3-461-KEYS-X.509-Fix-Basic-Constraints-CA-flag-parsi.patch
 	patches.kernel.org/6.17.3-462-hwrng-ks-sa-fix-division-by-zero-in-ks_sa_rng_.patch
 	patches.kernel.org/6.17.3-463-cramfs-fix-incorrect-physical-page-address-cal.patch
+	patches.kernel.org/6.17.3-464-ocfs2-fix-double-free-in-user_cluster_connect.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
