powerpc/8xx: Remove left-over instruction and comments in DataStoreTLBMiss handler (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -89,6 +89,7 @@
 	patches.kernel.org/6.17.3-017-gfs2-Get-rid-of-GLF_INVALIDATE_IN_PROGRESS.patch
 	patches.kernel.org/6.17.3-018-gfs2-do_xmote-cleanup.patch
 	patches.kernel.org/6.17.3-019-gfs2-Add-proper-lockspace-locking.patch
+	patches.kernel.org/6.17.3-020-powerpc-8xx-Remove-left-over-instruction-and-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
