--- a/series.conf
+++ b/series.conf
@@ -296,6 +296,7 @@
 	patches.kernel.org/6.17.3-224-f2fs-fix-condition-in-__allow_reserved_blocks.patch
 	patches.kernel.org/6.17.3-225-f2fs-fix-to-avoid-overflow-while-left-shift-op.patch
 	patches.kernel.org/6.17.3-226-f2fs-fix-to-zero-data-after-EOF-for-compressed.patch
+	patches.kernel.org/6.17.3-227-drm-bridge-it6505-select-REGMAP_I2C.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
