thunderbolt: Fix use-after-free in tb_dp_dprx_work (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -621,6 +621,7 @@
 	patches.kernel.org/6.17.3-549-PCI-AER-Avoid-NULL-pointer-dereference-in-aer_.patch
 	patches.kernel.org/6.17.3-550-remoteproc-pru-Fix-potential-NULL-pointer-dere.patch
 	patches.kernel.org/6.17.3-551-PCI-endpoint-pci-epf-test-Add-NULL-check-for-D.patch
+	patches.kernel.org/6.17.3-552-thunderbolt-Fix-use-after-free-in-tb_dp_dprx_w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
