sparc: fix accurate exception reporting in copy_{from_to}_user for UltraSPARC (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -469,6 +469,7 @@
 	patches.kernel.org/6.17.3-397-iommu-vt-d-debugfs-Fix-legacy-mode-page-table-.patch
 	patches.kernel.org/6.17.3-398-wifi-mac80211-fix-Rx-packet-handling-when-pubs.patch
 	patches.kernel.org/6.17.3-399-ASoC-Intel-sof_sdw-Prevent-jump-to-NULL-add_si.patch
+	patches.kernel.org/6.17.3-400-sparc-fix-accurate-exception-reporting-in-copy.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
