--- a/series.conf
+++ b/series.conf
@@ -540,6 +540,7 @@
 	patches.kernel.org/6.17.3-468-PCI-j721e-Fix-incorrect-error-message-in-probe.patch
 	patches.kernel.org/6.17.3-469-idpf-fix-mismatched-free-function-for-dma_allo.patch
 	patches.kernel.org/6.17.3-470-tcp-use-skb-len-instead-of-skb-truesize-in-tcp.patch
+	patches.kernel.org/6.17.3-471-nfp-fix-RSS-hash-key-size-when-RSS-is-not-supp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
