tcp: fix __tcp_close() to only send RST when required (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -384,6 +384,7 @@
 	patches.kernel.org/6.17.3-312-PCI-tegra-Fix-devm_kcalloc-argument-order-for-.patch
 	patches.kernel.org/6.17.3-313-wifi-mac80211-consider-links-for-validating-SC.patch
 	patches.kernel.org/6.17.3-314-PCI-qcom-Add-equalization-settings-for-8.0-GT-.patch
+	patches.kernel.org/6.17.3-315-tcp-fix-__tcp_close-to-only-send-RST-when-requ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
