--- a/series.conf
+++ b/series.conf
@@ -139,6 +139,7 @@
 	patches.kernel.org/6.17.3-067-genirq-Add-irq_chip_-startup-shutdown-_parent.patch
 	patches.kernel.org/6.17.3-068-PCI-MSI-Add-startup-shutdown-for-per-device-do.patch
 	patches.kernel.org/6.17.3-069-irqchip-sg2042-msi-Fix-broken-affinity-setting.patch
+	patches.kernel.org/6.17.3-070-scripts-misc-check-update-export-checks-for-EX.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
