--- a/series.conf
+++ b/series.conf
@@ -492,6 +492,7 @@
 	patches.kernel.org/6.17.3-420-wifi-cfg80211-fix-width-unit-in-cfg80211_radio.patch
 	patches.kernel.org/6.17.3-421-dm-vdo-return-error-on-corrupted-metadata-in-s.patch
 	patches.kernel.org/6.17.3-422-coresight-fix-indentation-error-in-cscfg_remov.patch
+	patches.kernel.org/6.17.3-423-coresight-etm4x-Conditionally-access-register-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
