Bluetooth: hci_sync: Fix using random address for BIG/PA advertisements (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -529,6 +529,7 @@
 	patches.kernel.org/6.17.3-457-Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_fre.patch
 	patches.kernel.org/6.17.3-458-Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
 	patches.kernel.org/6.17.3-459-Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
+	patches.kernel.org/6.17.3-460-Bluetooth-hci_sync-Fix-using-random-address-fo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
