gfs2: Fix LM_FLAG_TRY* logic in add_to_queue (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -84,6 +84,7 @@
 	patches.kernel.org/6.17.3-012-gfs2-Fix-GLF_INVALIDATE_IN_PROGRESS-flag-clear.patch
 	patches.kernel.org/6.17.3-013-gfs2-Remove-space-before-newline.patch
 	patches.kernel.org/6.17.3-014-gfs2-Further-sanitize-lock_dlm.c.patch
+	patches.kernel.org/6.17.3-015-gfs2-Fix-LM_FLAG_TRY-logic-in-add_to_queue.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
