--- a/series.conf
+++ b/series.conf
@@ -418,6 +418,7 @@
 	patches.kernel.org/6.17.3-346-HID-steelseries-Fix-STEELSERIES_SRWS1-handling.patch
 	patches.kernel.org/6.17.3-347-watchdog-intel_oc_wdt-Do-not-try-to-write-into.patch
 	patches.kernel.org/6.17.3-348-watchdog-mpc8xxx_wdt-Reload-the-watchdog-timer.patch
+	patches.kernel.org/6.17.3-349-PCI-endpoint-pci-epf-test-Fix-doorbell-test-su.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
