--- a/series.conf
+++ b/series.conf
@@ -317,6 +317,7 @@
 	patches.kernel.org/6.17.3-245-scsi-pm80xx-Fix-array-index-out-of-of-bounds-o.patch
 	patches.kernel.org/6.17.3-246-scsi-libsas-Add-dev_parent_is_expander-helper.patch
 	patches.kernel.org/6.17.3-247-scsi-pm80xx-Use-dev_parent_is_expander-helper.patch
+	patches.kernel.org/6.17.3-248-scsi-pm80xx-Add-helper-function-to-get-the-loc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
