net/mlx5: pagealloc: Fix reclaim race during command interface teardown (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -544,6 +544,7 @@
 	patches.kernel.org/6.17.3-472-net-ena-return-0-in-ena_get_rxfh_key_size-when.patch
 	patches.kernel.org/6.17.3-473-net-dlink-handle-copy_thresh-allocation-failur.patch
 	patches.kernel.org/6.17.3-474-net-mlx5-Stop-polling-for-command-response-if-.patch
+	patches.kernel.org/6.17.3-475-net-mlx5-pagealloc-Fix-reclaim-race-during-com.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
