--- a/series.conf
+++ b/series.conf
@@ -215,6 +215,7 @@
 	patches.kernel.org/6.17.3-143-arm64-dts-ti-k3-pinctrl-Fix-the-bug-in-existin.patch
 	patches.kernel.org/6.17.3-144-arm64-dts-renesas-r9a09g047e57-smarc-Fix-gpio-.patch
 	patches.kernel.org/6.17.3-145-arm64-dts-mediatek-mt6331-Fix-pmic-regulators-.patch
+	patches.kernel.org/6.17.3-146-mmc-core-Fix-variable-shadowing-in-mmc_route_r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
