--- a/series.conf
+++ b/series.conf
@@ -374,6 +374,7 @@
 	patches.kernel.org/6.17.3-302-drm-amd-pm-Disable-ULV-even-if-unsupported-v3.patch
 	patches.kernel.org/6.17.3-303-drm-amd-pm-Fix-si_upload_smc_data-v3.patch
 	patches.kernel.org/6.17.3-304-drm-amd-pm-Adjust-si_upload_smc_data-register-.patch
+	patches.kernel.org/6.17.3-305-drm-amd-pm-Treat-zero-vblank-time-as-too-short.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
