--- a/series.conf
+++ b/series.conf
@@ -525,6 +525,7 @@
 	patches.kernel.org/6.17.3-453-net-macb-move-ring-size-computation-to-functio.patch
 	patches.kernel.org/6.17.3-454-net-macb-single-dma_alloc_coherent-for-DMA-des.patch
 	patches.kernel.org/6.17.3-455-Bluetooth-btintel_pcie-Refactor-Device-Coredum.patch
+	patches.kernel.org/6.17.3-456-Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
