--- a/series.conf
+++ b/series.conf
@@ -167,6 +167,7 @@
 	patches.kernel.org/6.17.3-095-vdso-Add-struct-__kernel_old_timeval-forward-d.patch
 	patches.kernel.org/6.17.3-096-ARM-dts-ti-omap-am335x-baltos-Fix-ti-en-ck32k-.patch
 	patches.kernel.org/6.17.3-097-ARM-dts-ti-omap-omap3-devkit8000-lcd-Fix-ti-ke.patch
+	patches.kernel.org/6.17.3-098-ARM-dts-omap-am335x-cm-t335-Remove-unused-mcas.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
