selftests/futex: Fix futex_wait() for 32bit ARM (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -244,6 +244,7 @@
 	patches.kernel.org/6.17.3-172-blk-throttle-fix-throtl_data-leak-during-disk-.patch
 	patches.kernel.org/6.17.3-173-bpf-Explicitly-check-accesses-to-bpf_sock_addr.patch
 	patches.kernel.org/6.17.3-174-mmc-select-REGMAP_MMIO-with-MMC_LOONGSON2.patch
+	patches.kernel.org/6.17.3-175-selftests-futex-Fix-futex_wait-for-32bit-ARM.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
