--- a/series.conf
+++ b/series.conf
@@ -238,6 +238,7 @@
 	patches.kernel.org/6.17.3-166-i3c-master-svc-Use-manual-response-for-IBI-eve.patch
 	patches.kernel.org/6.17.3-167-i3c-master-svc-Recycle-unused-IBI-slot.patch
 	patches.kernel.org/6.17.3-168-block-update-validation-of-atomic-writes-bound.patch
+	patches.kernel.org/6.17.3-169-block-fix-stacking-of-atomic-writes-when-atomi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
