--- a/series.conf
+++ b/series.conf
@@ -571,6 +571,7 @@
 	patches.kernel.org/6.17.3-499-io_uring-zcrx-fix-overshooting-recv-limit.patch
 	patches.kernel.org/6.17.3-500-ASoC-wcd934x-fix-error-handling-in-wcd934x_cod.patch
 	patches.kernel.org/6.17.3-501-ASoC-SOF-ipc3-topology-Fix-multi-core-and-stat.patch
+	patches.kernel.org/6.17.3-502-ASoC-codecs-wcd937x-set-the-comp-soundwire-por.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
