PCI: xgene-msi: Return negative -EINVAL in xgene_msi_handler_setup() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -291,6 +291,7 @@
 	patches.kernel.org/6.17.3-219-drm-amdgpu-Fix-jpeg-v4.0.3-poison-irq-call-tra.patch
 	patches.kernel.org/6.17.3-220-drm-amdgpu-Fix-vcn-v4.0.3-poison-irq-call-trac.patch
 	patches.kernel.org/6.17.3-221-PCI-endpoint-pci-ep-msi-Fix-NULL-vs-IS_ERR-che.patch
+	patches.kernel.org/6.17.3-222-PCI-xgene-msi-Return-negative-EINVAL-in-xgene_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
