--- a/series.conf
+++ b/series.conf
@@ -416,6 +416,7 @@
 	patches.kernel.org/6.17.3-344-netfilter-ipset-Remove-unused-htable_bits-in-m.patch
 	patches.kernel.org/6.17.3-345-ipvs-Use-READ_ONCE-WRITE_ONCE-for-ipvs-enable.patch
 	patches.kernel.org/6.17.3-346-HID-steelseries-Fix-STEELSERIES_SRWS1-handling.patch
+	patches.kernel.org/6.17.3-347-watchdog-intel_oc_wdt-Do-not-try-to-write-into.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
