--- a/series.conf
+++ b/series.conf
@@ -311,6 +311,7 @@
 	patches.kernel.org/6.17.3-239-drm-amd-display-Add-NULL-pointer-checks-in-dc_.patch
 	patches.kernel.org/6.17.3-240-crypto-keembay-Add-missing-check-after-sg_nent.patch
 	patches.kernel.org/6.17.3-241-hwrng-nomadik-add-ARM_AMBA-dependency.patch
+	patches.kernel.org/6.17.3-242-docs-iio-ad3552r-Fix-malformed-code-block-dire.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
