--- a/series.conf
+++ b/series.conf
@@ -79,6 +79,7 @@
 	patches.kernel.org/6.17.3-007-kbuild-Add-missing-objtree-prefix-to-powerpc-c.patch
 	patches.kernel.org/6.17.3-008-selftests-arm64-Check-fread-return-value-in-ex.patch
 	patches.kernel.org/6.17.3-009-selftests-arm64-Fix-Waddress-warning-in-tpidr2.patch
+	patches.kernel.org/6.17.3-010-kselftest-arm64-gcs-Correctly-check-return-val.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
