--- a/series.conf
+++ b/series.conf
@@ -451,6 +451,7 @@
 	patches.kernel.org/6.17.3-379-smc-Use-__sk_dst_get-and-dst_dev_rcu-in-smc_cl.patch
 	patches.kernel.org/6.17.3-380-smc-Use-__sk_dst_get-and-dst_dev_rcu-in-smc_vl.patch
 	patches.kernel.org/6.17.3-381-tls-Use-__sk_dst_get-and-dst_dev_rcu-in-get_ne.patch
+	patches.kernel.org/6.17.3-382-mptcp-Call-dst_release-in-mptcp_active_enable.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
