--- a/series.conf
+++ b/series.conf
@@ -322,6 +322,7 @@
 	patches.kernel.org/6.17.3-250-mptcp-Fix-up-subflow-s-memcg-when-CONFIG_SOCK_.patch
 	patches.kernel.org/6.17.3-251-scsi-myrs-Fix-dma_alloc_coherent-error-check.patch
 	patches.kernel.org/6.17.3-252-f2fs-fix-to-clear-unusable_cap-for-checkpoint-.patch
+	patches.kernel.org/6.17.3-253-f2fs-fix-to-avoid-NULL-pointer-dereference-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
