--- a/series.conf
+++ b/series.conf
@@ -379,6 +379,7 @@
 	patches.kernel.org/6.17.3-307-drm-amd-pm-Disable-SCLK-switching-on-Oland-wit.patch
 	patches.kernel.org/6.17.3-308-wifi-mac80211-Make-CONNECTION_MONITOR-optional.patch
 	patches.kernel.org/6.17.3-309-wifi-mwifiex-send-world-regulatory-domain-to-d.patch
+	patches.kernel.org/6.17.3-310-wifi-brcmfmac-fix-43752-SDIO-FWVID-incorrectly.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
