--- a/series.conf
+++ b/series.conf
@@ -339,6 +339,7 @@
 	patches.kernel.org/6.17.3-267-wifi-rtw88-Use-led-brightness_set_blocking-for.patch
 	patches.kernel.org/6.17.3-268-net-phy-introduce-phy_id_compare_vendor-PHY-ID.patch
 	patches.kernel.org/6.17.3-269-net-phy-as21xxx-better-handle-PHY-HW-reset-on-.patch
+	patches.kernel.org/6.17.3-270-PCI-rcar-host-Pass-proper-IRQ-domain-to-generi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
