smb: server: fix IRD/ORD negotiation with the client (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -99,6 +99,7 @@
 	patches.kernel.org/6.17.3-027-perf-arm_spe-Prevent-overflow-in-PERF_IDX2OFF.patch
 	patches.kernel.org/6.17.3-028-erofs-avoid-reading-more-for-fragment-maps.patch
 	patches.kernel.org/6.17.3-029-smb-client-fix-sending-the-iwrap-custom-IRD-OR.patch
+	patches.kernel.org/6.17.3-030-smb-server-fix-IRD-ORD-negotiation-with-the-cl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
