selftests: watchdog: skip ping loop if WDIOF_KEEPALIVEPING not supported (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -239,6 +239,7 @@
 	patches.kernel.org/6.17.3-167-i3c-master-svc-Recycle-unused-IBI-slot.patch
 	patches.kernel.org/6.17.3-168-block-update-validation-of-atomic-writes-bound.patch
 	patches.kernel.org/6.17.3-169-block-fix-stacking-of-atomic-writes-when-atomi.patch
+	patches.kernel.org/6.17.3-170-selftests-watchdog-skip-ping-loop-if-WDIOF_KEE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
