tools/nolibc: add stdbool.h to nolibc includes (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -265,6 +265,7 @@
 	patches.kernel.org/6.17.3-193-bpf-Mark-kfuncs-as-__noclone.patch
 	patches.kernel.org/6.17.3-194-once-fix-race-by-moving-DO_ONCE-to-separate-se.patch
 	patches.kernel.org/6.17.3-195-hwmon-mlxreg-fan-Separate-methods-of-fan-setti.patch
+	patches.kernel.org/6.17.3-196-tools-nolibc-add-stdbool.h-to-nolibc-includes.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
