net: phy: introduce phy_id_compare_vendor() PHY ID helper (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -337,6 +337,7 @@
 	patches.kernel.org/6.17.3-265-RDMA-mlx5-Better-estimate-max_qp_wr-to-reflect.patch
 	patches.kernel.org/6.17.3-266-RDMA-mlx5-Fix-vport-loopback-forcing-for-MPV-d.patch
 	patches.kernel.org/6.17.3-267-wifi-rtw88-Use-led-brightness_set_blocking-for.patch
+	patches.kernel.org/6.17.3-268-net-phy-introduce-phy_id_compare_vendor-PHY-ID.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
