usb: typec: tipd: Clear interrupts first (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -627,6 +627,7 @@
 	patches.kernel.org/6.17.3-555-bus-fsl-mc-Check-return-value-of-platform_get_.patch
 	patches.kernel.org/6.17.3-556-net-9p-Fix-buffer-overflow-in-USB-transport-la.patch
 	patches.kernel.org/6.17.3-557-net-usb-asix-hold-PM-usage-ref-to-avoid-PM-MDI.patch
+	patches.kernel.org/6.17.3-558-usb-typec-tipd-Clear-interrupts-first.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
