--- a/series.conf
+++ b/series.conf
@@ -406,6 +406,7 @@
 	patches.kernel.org/6.17.3-334-drm-msm-Fix-bootup-splat-with-separate_gpu_drm.patch
 	patches.kernel.org/6.17.3-335-drm-msm-dpu-fix-incorrect-type-for-ret.patch
 	patches.kernel.org/6.17.3-336-wifi-mac80211-fix-reporting-of-all-valid-links.patch
+	patches.kernel.org/6.17.3-337-fs-ntfs3-Fix-integer-overflow-in-run_unpack.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
