LoongArch: BPF: Make trampoline size stable (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -594,6 +594,7 @@
 	patches.kernel.org/6.17.3-522-LoongArch-BPF-Sign-extend-struct-ops-return-va.patch
 	patches.kernel.org/6.17.3-523-LoongArch-BPF-No-support-of-struct-argument-in.patch
 	patches.kernel.org/6.17.3-524-LoongArch-BPF-Don-t-align-trampoline-size.patch
+	patches.kernel.org/6.17.3-525-LoongArch-BPF-Make-trampoline-size-stable.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
