selftests: always install UAPI headers to the correct directory (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -252,6 +252,7 @@
 	patches.kernel.org/6.17.3-180-arm64-dts-apple-t600x-Add-missing-WiFi-propert.patch
 	patches.kernel.org/6.17.3-181-arm64-dts-apple-t600x-Add-bluetooth-device-nod.patch
 	patches.kernel.org/6.17.3-182-arm64-dts-apple-Add-ethernet0-alias-for-J375-t.patch
+	patches.kernel.org/6.17.3-183-selftests-always-install-UAPI-headers-to-the-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
