--- a/series.conf
+++ b/series.conf
@@ -512,6 +512,7 @@
 	patches.kernel.org/6.17.3-440-usb-vhci-hcd-Prevent-suspending-virtually-atta.patch
 	patches.kernel.org/6.17.3-441-PCI-rcar-gen4-Add-missing-1ms-delay-after-PWR-.patch
 	patches.kernel.org/6.17.3-442-PCI-rcar-gen4-Assure-reset-occurs-before-DBI-a.patch
+	patches.kernel.org/6.17.3-443-PCI-rcar-gen4-Fix-inverted-break-condition-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
