seccomp: Fix a race with WAIT_KILLABLE_RECV if the tracer replies too fast (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -75,6 +75,7 @@
 	patches.kernel.org/6.17.3-003-init-INITRAMFS_PRESERVE_MTIME-should-depend-on.patch
 	patches.kernel.org/6.17.3-004-pid-use-ns_capable_noaudit-when-determining-ne.patch
 	patches.kernel.org/6.17.3-005-Fix-CC_HAS_ASM_GOTO_OUTPUT-on-non-x86-architec.patch
+	patches.kernel.org/6.17.3-006-seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
