drm/amd/pm: Adjust si_upload_smc_data register programming (v3) (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -373,6 +373,7 @@
 	patches.kernel.org/6.17.3-301-drm-amdgpu-Power-up-UVD-3-for-FW-validation-v2.patch
 	patches.kernel.org/6.17.3-302-drm-amd-pm-Disable-ULV-even-if-unsupported-v3.patch
 	patches.kernel.org/6.17.3-303-drm-amd-pm-Fix-si_upload_smc_data-v3.patch
+	patches.kernel.org/6.17.3-304-drm-amd-pm-Adjust-si_upload_smc_data-register-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
