EDAC/i10nm: Skip DIMM enumeration on a disabled memory controller (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -100,6 +100,7 @@
 	patches.kernel.org/6.17.3-028-erofs-avoid-reading-more-for-fragment-maps.patch
 	patches.kernel.org/6.17.3-029-smb-client-fix-sending-the-iwrap-custom-IRD-OR.patch
 	patches.kernel.org/6.17.3-030-smb-server-fix-IRD-ORD-negotiation-with-the-cl.patch
+	patches.kernel.org/6.17.3-031-EDAC-i10nm-Skip-DIMM-enumeration-on-a-disabled.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
