wifi: ath12k: fix the fetching of combined rssi (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -462,6 +462,7 @@
 	patches.kernel.org/6.17.3-390-wifi-ath12k-fix-overflow-warning-on-num_pwr_le.patch
 	patches.kernel.org/6.17.3-391-wifi-ath12k-fix-signal-in-radiotap-for-WCN7850.patch
 	patches.kernel.org/6.17.3-392-wifi-ath12k-fix-HAL_PHYRX_COMMON_USER_INFO-han.patch
+	patches.kernel.org/6.17.3-393-wifi-ath12k-fix-the-fetching-of-combined-rssi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
