PCI: qcom: Restrict port parsing only to PCIe bridge child nodes (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -341,6 +341,7 @@
 	patches.kernel.org/6.17.3-269-net-phy-as21xxx-better-handle-PHY-HW-reset-on-.patch
 	patches.kernel.org/6.17.3-270-PCI-rcar-host-Pass-proper-IRQ-domain-to-generi.patch
 	patches.kernel.org/6.17.3-271-fuse-remove-unneeded-offset-assignment-when-fi.patch
+	patches.kernel.org/6.17.3-272-PCI-qcom-Restrict-port-parsing-only-to-PCIe-br.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
