--- a/series.conf
+++ b/series.conf
@@ -555,6 +555,7 @@
 	patches.kernel.org/6.17.3-483-nfs-localio-avoid-issuing-misaligned-IO-using-.patch
 	patches.kernel.org/6.17.3-484-octeontx2-vf-fix-bitmap-leak.patch
 	patches.kernel.org/6.17.3-485-octeontx2-pf-fix-bitmap-leak.patch
+	patches.kernel.org/6.17.3-486-vhost-vringh-Modify-the-return-value-check.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
