--- a/series.conf
+++ b/series.conf
@@ -578,6 +578,7 @@
 	patches.kernel.org/6.17.3-506-fs-udf-fix-OOB-read-in-lengthAllocDescs-handli.patch
 	patches.kernel.org/6.17.3-507-net-nfc-nci-Add-parameter-validation-for-packe.patch
 	patches.kernel.org/6.17.3-508-mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
+	patches.kernel.org/6.17.3-509-mfd-intel_soc_pmic_chtdc_ti-Set-use_single_rea.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
