--- a/series.conf
+++ b/series.conf
@@ -363,6 +363,7 @@
 	patches.kernel.org/6.17.3-291-crypto-hisilicon-zip-remove-unnecessary-valida.patch
 	patches.kernel.org/6.17.3-292-crypto-hisilicon-re-enable-address-prefetch-af.patch
 	patches.kernel.org/6.17.3-293-crypto-hisilicon-check-the-sva-module-status-w.patch
+	patches.kernel.org/6.17.3-294-crypto-hisilicon-qm-check-whether-the-input-fu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
