net: use dst_dev_rcu() in sk_setup_caps() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -357,6 +357,7 @@
 	patches.kernel.org/6.17.3-285-ipv6-start-using-dst_dev_rcu.patch
 	patches.kernel.org/6.17.3-286-ipv6-use-RCU-in-ip6_xmit.patch
 	patches.kernel.org/6.17.3-287-ipv6-use-RCU-in-ip6_output.patch
+	patches.kernel.org/6.17.3-288-net-use-dst_dev_rcu-in-sk_setup_caps.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
