--- a/series.conf
+++ b/series.conf
@@ -522,6 +522,7 @@
 	patches.kernel.org/6.17.3-450-ptp-Add-a-upper-bound-on-max_vclocks.patch
 	patches.kernel.org/6.17.3-451-vhost-vringh-Fix-copy_to_iter-return-value-che.patch
 	patches.kernel.org/6.17.3-452-net-macb-remove-illusion-about-TBQPH-RBQPH-bei.patch
+	patches.kernel.org/6.17.3-453-net-macb-move-ring-size-computation-to-functio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
