--- a/series.conf
+++ b/series.conf
@@ -148,6 +148,7 @@
 	patches.kernel.org/6.17.3-076-arm64-dts-apple-t8103-j457-Fix-PCIe-ethernet-i.patch
 	patches.kernel.org/6.17.3-077-regulator-scmi-Use-int-type-to-store-negative-.patch
 	patches.kernel.org/6.17.3-078-selftests-futex-Fix-some-futex_numa_mpol-subte.patch
+	patches.kernel.org/6.17.3-079-tools-nolibc-avoid-error-in-dup2-if-old-fd-equ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
