arm64: dts: allwinner: t527: avaota-a1: hook up external 32k crystal (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -222,6 +222,7 @@
 	patches.kernel.org/6.17.3-150-arm64-dts-mediatek-mt8516-pumpkin-Fix-machine-.patch
 	patches.kernel.org/6.17.3-151-arm64-dts-allwinner-a527-cubie-a5e-Add-LEDs.patch
 	patches.kernel.org/6.17.3-152-arm64-dts-allwinner-a527-cubie-a5e-Drop-extern.patch
+	patches.kernel.org/6.17.3-153-arm64-dts-allwinner-t527-avaota-a1-hook-up-ext.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
