--- a/series.conf
+++ b/series.conf
@@ -628,6 +628,7 @@
 	patches.kernel.org/6.17.3-556-net-9p-Fix-buffer-overflow-in-USB-transport-la.patch
 	patches.kernel.org/6.17.3-557-net-usb-asix-hold-PM-usage-ref-to-avoid-PM-MDI.patch
 	patches.kernel.org/6.17.3-558-usb-typec-tipd-Clear-interrupts-first.patch
+	patches.kernel.org/6.17.3-559-arm64-dts-qcom-qcm2290-Disable-USB-SS-bus-inst.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
