--- a/series.conf
+++ b/series.conf
@@ -616,6 +616,7 @@
 	patches.kernel.org/6.17.3-544-misc-fastrpc-fix-possible-map-leak-in-fastrpc_.patch
 	patches.kernel.org/6.17.3-545-misc-fastrpc-Skip-reference-for-DMA-handles.patch
 	patches.kernel.org/6.17.3-546-Input-atmel_mxt_ts-allow-reset-GPIO-to-sleep.patch
+	patches.kernel.org/6.17.3-547-Input-uinput-zero-initialize-uinput_ff_upload_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
