--- a/series.conf
+++ b/series.conf
@@ -170,6 +170,7 @@
 	patches.kernel.org/6.17.3-098-ARM-dts-omap-am335x-cm-t335-Remove-unused-mcas.patch
 	patches.kernel.org/6.17.3-099-PM-devfreq-mtk-cci-Fix-potential-error-pointer.patch
 	patches.kernel.org/6.17.3-100-power-supply-cw2015-Fix-a-alignment-coding-sty.patch
+	patches.kernel.org/6.17.3-101-hwmon-asus-ec-sensors-Narrow-lock-for-X870E-CR.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
