PM: sleep: core: Clear power.must_resume in noirq suspend error path (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -162,6 +162,7 @@
 	patches.kernel.org/6.17.3-090-genirq-test-Ensure-CPU-1-is-online-for-hotplug.patch
 	patches.kernel.org/6.17.3-091-selftests-bpf-Fix-count-write-in-testapp_xdp_m.patch
 	patches.kernel.org/6.17.3-092-vdso-datastore-Gate-time-data-behind-CONFIG_GE.patch
+	patches.kernel.org/6.17.3-093-PM-sleep-core-Clear-power.must_resume-in-noirq.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
