LoongArch: BPF: Remove duplicated flags check (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -598,6 +598,7 @@
 	patches.kernel.org/6.17.3-526-LoongArch-BPF-Make-error-handling-robust-in-ar.patch
 	patches.kernel.org/6.17.3-527-LoongArch-BPF-Remove-duplicated-bpf_flush_icac.patch
 	patches.kernel.org/6.17.3-528-LoongArch-BPF-No-text_poke-for-kernel-text.patch
+	patches.kernel.org/6.17.3-529-LoongArch-BPF-Remove-duplicated-flags-check.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
