block: update validation of atomic writes boundary for stacked devices (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -237,6 +237,7 @@
 	patches.kernel.org/6.17.3-165-nvme-tcp-send-only-permitted-commands-for-secu.patch
 	patches.kernel.org/6.17.3-166-i3c-master-svc-Use-manual-response-for-IBI-eve.patch
 	patches.kernel.org/6.17.3-167-i3c-master-svc-Recycle-unused-IBI-slot.patch
+	patches.kernel.org/6.17.3-168-block-update-validation-of-atomic-writes-bound.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
