drm/msm: Fix missing VM_BIND offset/range validation (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -393,6 +393,7 @@
 	patches.kernel.org/6.17.3-321-misc-genwqe-Fix-incorrect-cmd-field-being-repo.patch
 	patches.kernel.org/6.17.3-322-pps-fix-warning-in-pps_register_cdev-when-regi.patch
 	patches.kernel.org/6.17.3-323-drm-msm-Fix-obj-leak-in-VM_BIND-error-path.patch
+	patches.kernel.org/6.17.3-324-drm-msm-Fix-missing-VM_BIND-offset-range-valid.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
