--- a/series.conf
+++ b/series.conf
@@ -206,6 +206,7 @@
 	patches.kernel.org/6.17.3-134-arm64-dts-rockchip-Add-RTC-on-rk3576-evb1-v10.patch
 	patches.kernel.org/6.17.3-135-arm64-dts-rockchip-Add-WiFi-on-rk3576-evb1-v10.patch
 	patches.kernel.org/6.17.3-136-arm64-dts-rockchip-Fix-network-on-rk3576-evb1-.patch
+	patches.kernel.org/6.17.3-137-arm64-dts-ti-k3-j742s2-mcu-wakeup-Override-fir.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
