f2fs: fix to truncate first page in error path of f2fs_truncate() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -435,6 +435,7 @@
 	patches.kernel.org/6.17.3-363-srcu-tiny-Remove-preempt_disable-enable-in-src.patch
 	patches.kernel.org/6.17.3-364-drm-amdgpu-Fix-allocating-extra-dwords-for-rin.patch
 	patches.kernel.org/6.17.3-365-f2fs-fix-to-update-map-m_next_extent-correctly.patch
+	patches.kernel.org/6.17.3-366-f2fs-fix-to-truncate-first-page-in-error-path-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
