--- a/series.conf
+++ b/series.conf
@@ -395,6 +395,7 @@
 	patches.kernel.org/6.17.3-323-drm-msm-Fix-obj-leak-in-VM_BIND-error-path.patch
 	patches.kernel.org/6.17.3-324-drm-msm-Fix-missing-VM_BIND-offset-range-valid.patch
 	patches.kernel.org/6.17.3-325-wifi-iwlwifi-Remove-redundant-header-files.patch
+	patches.kernel.org/6.17.3-326-drm-msm-mdp4-stop-supporting-no-IOMMU-configur.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
