--- a/series.conf
+++ b/series.conf
@@ -115,6 +115,7 @@
 	patches.kernel.org/6.17.3-043-bpf-Tidy-verifier-bug-message.patch
 	patches.kernel.org/6.17.3-044-regmap-Remove-superfluous-check-for-config-in-.patch
 	patches.kernel.org/6.17.3-045-selftests-bpf-Copy-test_kmods-when-installing-.patch
+	patches.kernel.org/6.17.3-046-rust-cpumask-Mark-CpumaskVar-as-transparent.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
