--- a/series.conf
+++ b/series.conf
@@ -397,6 +397,7 @@
 	patches.kernel.org/6.17.3-325-wifi-iwlwifi-Remove-redundant-header-files.patch
 	patches.kernel.org/6.17.3-326-drm-msm-mdp4-stop-supporting-no-IOMMU-configur.patch
 	patches.kernel.org/6.17.3-327-drm-msm-stop-supporting-no-IOMMU-configuration.patch
+	patches.kernel.org/6.17.3-328-idpf-fix-Rx-descriptor-ready-check-barrier-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
