--- a/series.conf
+++ b/series.conf
@@ -412,6 +412,7 @@
 	patches.kernel.org/6.17.3-340-iio-consumers-Fix-offset-handling-in-iio_conve.patch
 	patches.kernel.org/6.17.3-341-mm-slub-Fix-cmp_loc_by_count-to-return-0-when-.patch
 	patches.kernel.org/6.17.3-342-tools-ynl-fix-undefined-variable-name.patch
+	patches.kernel.org/6.17.3-343-RDMA-mlx5-Fix-page-size-bitmap-calculation-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
