--- a/series.conf
+++ b/series.conf
@@ -504,6 +504,7 @@
 	patches.kernel.org/6.17.3-432-coresight-Fix-incorrect-handling-for-return-va.patch
 	patches.kernel.org/6.17.3-433-NFSv4.1-fix-backchannel-max_resp_sz-verificati.patch
 	patches.kernel.org/6.17.3-434-net-ethtool-tsconfig-set-command-must-provide-.patch
+	patches.kernel.org/6.17.3-435-ipvs-Defer-ip_vs_ftp-unregister-during-netns-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
