--- a/series.conf
+++ b/series.conf
@@ -388,6 +388,7 @@
 	patches.kernel.org/6.17.3-316-fanotify-Validate-the-return-value-of-mnt_ns_f.patch
 	patches.kernel.org/6.17.3-317-drm-amdkfd-Fix-error-code-sign-for-EINVAL-in-s.patch
 	patches.kernel.org/6.17.3-318-usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
+	patches.kernel.org/6.17.3-319-usb-gadget-configfs-Correctly-set-use_os_strin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
