io_uring/waitid: always prune wait queue entry in io_waitid_wait() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -567,6 +567,7 @@
 	patches.kernel.org/6.17.3-495-Squashfs-fix-uninit-value-in-squashfs_get_pare.patch
 	patches.kernel.org/6.17.3-496-uio_hv_generic-Let-userspace-take-care-of-inte.patch
 	patches.kernel.org/6.17.3-497-hisi_acc_vfio_pci-Fix-reference-leak-in-hisi_a.patch
+	patches.kernel.org/6.17.3-498-io_uring-waitid-always-prune-wait-queue-entry-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
