--- a/series.conf
+++ b/series.conf
@@ -465,6 +465,7 @@
 	patches.kernel.org/6.17.3-393-wifi-ath12k-fix-the-fetching-of-combined-rssi.patch
 	patches.kernel.org/6.17.3-394-wifi-ath12k-Add-fallback-for-invalid-channel-n.patch
 	patches.kernel.org/6.17.3-395-wifi-ath12k-fix-wrong-logging-ID-used-for-CE.patch
+	patches.kernel.org/6.17.3-396-wifi-ath10k-avoid-unnecessary-wait-for-service.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
