ASoC: SOF: ipc4-pcm: Fix incorrect comparison with number of tdm_slots (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -457,6 +457,7 @@
 	patches.kernel.org/6.17.3-385-RDMA-core-Resolve-MAC-of-next-hop-device-witho.patch
 	patches.kernel.org/6.17.3-386-IB-sa-Fix-sa_local_svc_timeout_ms-read-race.patch
 	patches.kernel.org/6.17.3-387-Documentation-trace-historgram-design-Separate.patch
+	patches.kernel.org/6.17.3-388-ASoC-SOF-ipc4-pcm-Fix-incorrect-comparison-wit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
