net: macb: remove illusion about TBQPH/RBQPH being per-queue (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -521,6 +521,7 @@
 	patches.kernel.org/6.17.3-449-net-usb-Remove-disruptive-netif_wake_queue-in-.patch
 	patches.kernel.org/6.17.3-450-ptp-Add-a-upper-bound-on-max_vclocks.patch
 	patches.kernel.org/6.17.3-451-vhost-vringh-Fix-copy_to_iter-return-value-che.patch
+	patches.kernel.org/6.17.3-452-net-macb-remove-illusion-about-TBQPH-RBQPH-bei.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
