--- a/series.conf
+++ b/series.conf
@@ -277,6 +277,7 @@
 	patches.kernel.org/6.17.3-205-i2c-designware-Fix-clock-issue-when-PM-is-disa.patch
 	patches.kernel.org/6.17.3-206-i2c-designware-Add-disabling-clocks-when-probe.patch
 	patches.kernel.org/6.17.3-207-libbpf-Fix-error-when-st-prefix_ops-and-ops-fr.patch
+	patches.kernel.org/6.17.3-208-bpf-Enforce-expected_attach_type-for-tailcall-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
