--- a/series.conf
+++ b/series.conf
@@ -270,6 +270,7 @@
 	patches.kernel.org/6.17.3-198-thermal-drivers-qcom-lmh-Add-missing-IRQ-inclu.patch
 	patches.kernel.org/6.17.3-199-i2c-mediatek-fix-potential-incorrect-use-of-I2.patch
 	patches.kernel.org/6.17.3-200-i2c-spacemit-ensure-bus-release-check-runs-whe.patch
+	patches.kernel.org/6.17.3-201-i2c-spacemit-remove-stop-function-to-avoid-bus.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
