--- a/series.conf
+++ b/series.conf
@@ -169,6 +169,7 @@
 	patches.kernel.org/6.17.3-097-ARM-dts-ti-omap-omap3-devkit8000-lcd-Fix-ti-ke.patch
 	patches.kernel.org/6.17.3-098-ARM-dts-omap-am335x-cm-t335-Remove-unused-mcas.patch
 	patches.kernel.org/6.17.3-099-PM-devfreq-mtk-cci-Fix-potential-error-pointer.patch
+	patches.kernel.org/6.17.3-100-power-supply-cw2015-Fix-a-alignment-coding-sty.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
