f2fs: fix to allow removing qf_name (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -323,6 +323,7 @@
 	patches.kernel.org/6.17.3-251-scsi-myrs-Fix-dma_alloc_coherent-error-check.patch
 	patches.kernel.org/6.17.3-252-f2fs-fix-to-clear-unusable_cap-for-checkpoint-.patch
 	patches.kernel.org/6.17.3-253-f2fs-fix-to-avoid-NULL-pointer-dereference-in-.patch
+	patches.kernel.org/6.17.3-254-f2fs-fix-to-allow-removing-qf_name.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
