sunrpc: fix null pointer dereference on zero-length checksum (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -617,6 +617,7 @@
 	patches.kernel.org/6.17.3-545-misc-fastrpc-Skip-reference-for-DMA-handles.patch
 	patches.kernel.org/6.17.3-546-Input-atmel_mxt_ts-allow-reset-GPIO-to-sleep.patch
 	patches.kernel.org/6.17.3-547-Input-uinput-zero-initialize-uinput_ff_upload_.patch
+	patches.kernel.org/6.17.3-548-sunrpc-fix-null-pointer-dereference-on-zero-le.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
