block: use int to store blk_stack_limits() return value (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -152,6 +152,7 @@
 	patches.kernel.org/6.17.3-080-selftests-nolibc-fix-EXPECT_NZ-macro.patch
 	patches.kernel.org/6.17.3-081-leds-leds-lp55xx-Use-correct-address-for-memor.patch
 	patches.kernel.org/6.17.3-082-PCI-MSI-Check-MSI_FLAG_PCI_MSI_MASK_PARENT-in-.patch
+	patches.kernel.org/6.17.3-083-block-use-int-to-store-blk_stack_limits-return.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
