iio: consumers: Fix handling of negative channel scale in iio_convert_raw_to_processed() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -408,6 +408,7 @@
 	patches.kernel.org/6.17.3-336-wifi-mac80211-fix-reporting-of-all-valid-links.patch
 	patches.kernel.org/6.17.3-337-fs-ntfs3-Fix-integer-overflow-in-run_unpack.patch
 	patches.kernel.org/6.17.3-338-fs-ntfs3-reject-index-allocation-if-BITMAP-is-.patch
+	patches.kernel.org/6.17.3-339-iio-consumers-Fix-handling-of-negative-channel.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
