ptp: Add a upper bound on max_vclocks (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -519,6 +519,7 @@
 	patches.kernel.org/6.17.3-447-RDMA-siw-Always-report-immediate-post-SQ-error.patch
 	patches.kernel.org/6.17.3-448-net-enetc-Fix-probing-error-message-typo-for-t.patch
 	patches.kernel.org/6.17.3-449-net-usb-Remove-disruptive-netif_wake_queue-in-.patch
+	patches.kernel.org/6.17.3-450-ptp-Add-a-upper-bound-on-max_vclocks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
