scsi: myrs: Fix dma_alloc_coherent() error check (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -320,6 +320,7 @@
 	patches.kernel.org/6.17.3-248-scsi-pm80xx-Add-helper-function-to-get-the-loc.patch
 	patches.kernel.org/6.17.3-249-scsi-pm80xx-Fix-pm8001_abort_task-for-chip_800.patch
 	patches.kernel.org/6.17.3-250-mptcp-Fix-up-subflow-s-memcg-when-CONFIG_SOCK_.patch
+	patches.kernel.org/6.17.3-251-scsi-myrs-Fix-dma_alloc_coherent-error-check.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
