arm64: dts: imx93-kontron: Fix USB port assignment (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -132,6 +132,7 @@
 	patches.kernel.org/6.17.3-060-libbpf-Export-bpf_object__prepare-symbol.patch
 	patches.kernel.org/6.17.3-061-firmware-arm_scmi-Mark-VirtIO-ready-before-reg.patch
 	patches.kernel.org/6.17.3-062-arm64-dts-imx93-kontron-Fix-GPIO-for-panel-reg.patch
+	patches.kernel.org/6.17.3-063-arm64-dts-imx93-kontron-Fix-USB-port-assignmen.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
