efi: Explain OVMF acronym in OVMF_DEBUG_LOG help text (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -351,6 +351,7 @@
 	patches.kernel.org/6.17.3-279-drm-amdgpu-vcn-Hold-pg_lock-before-vcn-power-o.patch
 	patches.kernel.org/6.17.3-280-drm-amdgpu-Check-vcn-state-before-profile-swit.patch
 	patches.kernel.org/6.17.3-281-accel-amdxdna-Use-int-instead-of-u32-to-store-.patch
+	patches.kernel.org/6.17.3-282-efi-Explain-OVMF-acronym-in-OVMF_DEBUG_LOG-hel.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
