PCI/pwrctrl: Fix double cleanup on devm_add_action_or_reset() failure (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -304,6 +304,7 @@
 	patches.kernel.org/6.17.3-232-drm-bridge-cdns-dsi-Fix-the-_atomic_check.patch
 	patches.kernel.org/6.17.3-233-usb-host-max3421-hcd-Fix-error-pointer-derefer.patch
 	patches.kernel.org/6.17.3-234-usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-thr.patch
+	patches.kernel.org/6.17.3-235-PCI-pwrctrl-Fix-double-cleanup-on-devm_add_act.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
