media: i2c: vd55g1: Fix duster register address (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -331,6 +331,7 @@
 	patches.kernel.org/6.17.3-259-media-staging-ipu7-convert-to-use-pci_alloc_ir.patch
 	patches.kernel.org/6.17.3-260-media-staging-ipu7-Don-t-set-name-for-IPU7-PCI.patch
 	patches.kernel.org/6.17.3-261-media-staging-ipu7-cleanup-the-MMU-correctly-i.patch
+	patches.kernel.org/6.17.3-262-media-i2c-vd55g1-Fix-duster-register-address.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
