arm64: dts: mediatek: mt8188: Change efuse fallback compatible to mt8186 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -210,6 +210,7 @@
 	patches.kernel.org/6.17.3-138-arm64-dts-ti-k3-Rename-rproc-reserved-mem-node.patch
 	patches.kernel.org/6.17.3-139-Revert-arm64-dts-ti-k3-j721e-sk-Fix-reversed-C.patch
 	patches.kernel.org/6.17.3-140-Revert-arm64-dts-ti-k3-j721e-beagleboneai64-Fi.patch
+	patches.kernel.org/6.17.3-141-arm64-dts-mediatek-mt8188-Change-efuse-fallbac.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
