dm: fix queue start/stop imbalance under suspend/load/resume races (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -587,6 +587,7 @@
 	patches.kernel.org/6.17.3-515-tracing-Have-trace_marker-use-per-cpu-data-to-.patch
 	patches.kernel.org/6.17.3-516-tracing-Fix-tracing_mark_raw_write-to-use-buf-.patch
 	patches.kernel.org/6.17.3-517-tracing-Stop-fortify-string-from-warning-in-tr.patch
+	patches.kernel.org/6.17.3-518-dm-fix-queue-start-stop-imbalance-under-suspen.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
