blk-mq: fix potential deadlock while nr_requests grown (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -200,6 +200,7 @@
 	patches.kernel.org/6.17.3-128-blk-mq-cleanup-shared-tags-case-in-blk_mq_upda.patch
 	patches.kernel.org/6.17.3-129-blk-mq-split-bitmap-grow-and-resize-case-in-bl.patch
 	patches.kernel.org/6.17.3-130-blk-mq-sched-add-new-parameter-nr_requests-in-.patch
+	patches.kernel.org/6.17.3-131-blk-mq-fix-potential-deadlock-while-nr_request.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
